# hackathon2_todo

./: .env.docker  .gitignore  AGENTS.md  FINAL-SUMMARY.md  FIXES-SUMMARY.md  FIX_SUMMARY.md  OPENROUTER_SETUP.md  README.md  VERCEL_DEPLOYMENT.md  cors_test.py  debug_cors.py  detailed_diagnostic.py  docker-compose.yml  middleware_test.py  simple_test_server.py  start.bat  start.sh  start_server.bat  start_server.py  startup_debug.py  stop.sh  test_cors_directly.py  test_db_connection.py  test_server.bat  vercel.json
.specify/memory/: constitution.md
deployment/: DEPLOYMENT.md
deployment/nginx/: aitodo.conf
deployment/systemd/: aitodo-backend.service  aitodo-frontend.service
docs/: api.md  deployment-guide.md  implementation-summary.md  phase3-ai-chatbot-implementation.md  responsive-design-implementation.md  startup-script-test-report.md  success-criteria-validation.md
phase-1-console/todo_app/: README.md  pyproject.toml  requirements.txt  setup.py
phase-1-console/todo_app/src/: __init__.py
phase-1-console/todo_app/src/cli/: interactive.py  main.py
phase-1-console/todo_app/src/models/: task.py
phase-1-console/todo_app/src/services/: todo_service.py
phase-2-web/: IMPLEMENTATION_SUMMARY.md  README.md  verify_implementation.sh
phase-2-web/backend/: .env.example  =0.1.9  Dockerfile  README.md  alembic.ini  mcp_server.py  requirements.txt  test_main.py  test_mcp_server.py  verify_mcp_server.py
phase-2-web/frontend/: .env.example  Dockerfile  README.md  next.config.js  package-lock.json  package.json  setup.sh  tsconfig.json
specs/phase2-web/: plan.md  (+2 more)
(+123 files in other folders)
